# Dottore-Genius-Invokation-TCG-Simulator

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  _setup.cfg  cli.ps1  cli.sh  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  test.sh  venv.sh
.github/workflows/: testing.yml  unittests.yml
dev_docs/: cli_readme.md  progress.md  state_machine_design.md
dgisim/: __init__.py  tmp.py
dgisim/profiles/: profile_random_game.py
dgisim/src/: __init__.py  action.py  agents.py  cli.py  cost.py  dices.py  element.py  event.py  game_state_machine.py  mode.py  player_agent.py
dgisim/src/action/: __init__.py  action.py  action_generator.py  action_generator_generator.py  enums.py  types.py
dgisim/src/buff/: buff.py  buffs.py
dgisim/src/card/: __init__.py  card.py  cards.py  cards_set.py
dgisim/src/character/: __init__.py  character.py  character_skill_enum.py  characters.py  characters_set.py  enums.py
dgisim/src/effect/: __init__.py  effect.py  effect_stack.py  effects_template.py  enums.py  event.py  structs.py
dgisim/src/element/: element.py
dgisim/src/event/: effect.py  effect_stack.py  event.py  event_pre.py
dgisim/src/helper/: __init__.py  hashable_dict.py  level_print.py  quality_of_life.py
dgisim/src/mode/: mode.py
dgisim/src/phase/: __init__.py  action_phase.py  card_select.py  card_select_phase.py  end_phase.py  game_end_phase.py  phase.py  roll_phase.py  starting_hand_select_phase.py
dgisim/src/state/: enums.py  (+5 more)
dgisim/test/: game_state_test.py
dgisim/tests/: agents.py  game_state_templates.py  test_behavior.py  test_card.py  test_deck.py  test_dices.py  test_effect.py  test_effect_stack.py  test_element.py  test_game.py  test_game_state.py  test_game_state_machine.py  test_reaction.py  test_status.py  test_statuses.py
docs/: README.md  action.rst  card.rst  character.rst  cli.rst  cli_readme.md  collections.rst  conf.py  control-game-flow.rst  deck.rst  design-n-philosophy.rst  dev_readme.md  dice.rst  effect.rst  element-n-reaction.rst  enums.rst  event_handling_design.md  game-state.rst  get-started.rst  index.rst  mode.rst  others.rst  phase.rst  player-agent.rst  player-state.rst  progress.md  requirements.txt  rl-env.rst  state_machine_design.md  status-summon-support.rst  structs.rst  tutorial.rst  tutorials.rst
docs/action/: action-generator.rst  player-action-n-instruction.rst
docs/card/: available-cards.rst  available_cards.rst  card-base.rst
docs/character/: available-chars.rst  char-base.rst
docs/collections/: cards.rst  characters.rst  deck.rst  effect-stack.rst  statuses.rst
docs/enums/: action-type.rst  character-skill-type.rst  character-skill.rst  faction.rst  factions.rst  pid.rst  triggering-signal.rst  weapon-type.rst  zone.rst
docs/flow-control/: game-state-machine.rst
docs/mode/: all-omni.rst  default-mode.rst
docs/others/: hashable-dict.rst
docs/rl-env/: encoding-plan.rst  linear-env.rst
docs/structs/: static-target.rst
docs/tutorials/: cli.rst  rl.rst
doctrees/: card.doctree  character.doctree  cli.doctree  dice.doctree  enums.doctree  environment.pickle  get-started.doctree  index.doctree
doctrees/card/: available-cards.doctree
doctrees/character/: available-chars.doctree  char-base.doctree
doctrees/enums/: character-skill-type.doctree  character-skill.doctree  factions.doctree  weapon-type.doctree
readme/: cards_milestone.md  characters_milestone.md
scripts/: README.md  build.sh  cli.sh  profile.sh  test.ps1  test.sh  venv.ps1  venv.sh
scripts/ps1/: build.ps1  cli.ps1  profile.ps1  test.ps1  venv.ps1
scripts/py/: .gitignore  encoding_limit.py  package_file_path.py
scripts/sh/: build.sh  cli.sh  encoding_limit.sh  profile.sh  test.sh  upload_pypi.sh  upload_test_pypi.sh  venv.sh
src/: __init__.py
src/dgisim/: __init__.py  agents.py  cli.py  deck.py  dice.py  dices.py  element.py  event.py  game_state_machine.py  mode.py  player_agent.py
src/package/: __init__.py  _env_check.py  agents.py  card.py  char.py  effect.py  status.py  summon.py  support.py
src/profiles/: profile_random_game.py
src/tests/: test_action.py  test_deck.py  test_dice.py  test_dices.py  test_effect.py  test_element.py  test_encodnig.py  test_game.py  test_game_state.py  test_game_state_machine.py  test_linear_env.py  test_reaction.py  test_status.py  test_statuses.py
(+348 files in other folders)
